# gocardless-bankaccountdata

./: Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: Cargo.toml
